[tool.poetry]
name = "bert_ner"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.4.2"
numpy = "^1.20.1"
torch = "^1.8.0"
datasets = "^1.5.0"
seqeval = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
